--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_CONNECTION_STRING=sqlite:///../sqlite/star_wars.db
+DB_CONNECTION_STRING=sqlite:///../../sqlite/star_wars.db
 SQLALCHEMY_TRACK_MODIFICATIONS=False
 FLASK_APP_KEY="any key works"
 FLASK_APP=src/main.py
