Flask jwt configuration

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 DB_CONNECTION_STRING=sqlite:///../../sqlite/star_wars.db
 SQLALCHEMY_TRACK_MODIFICATIONS=False
 FLASK_APP_KEY="any key works"
+JWT_SECRET_KEY="a good random one"
 FLASK_APP=src/main.py
 FLASK_ENV=development
 FLASK_PORT=3000
